change filter icon to funnel

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -16,7 +16,7 @@ block content
           button.btn.btn-primary(type="submit")
             i.fa.fa-plus
         button#filter-modal-toggle.btn.btn-default
-          i.fa.fa-list
+          i.fa.fa-filter
         button#sidebar-toggle.btn.btn-default
           i.fa.fa-arrows-h
     #zoom-controls.btn-group-vertical.controls
