First version of new interface on graph

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -34,13 +34,23 @@
   stroke-location:outside;
 }
 
+
 .node text {
-  font: 16px sans-serif;
+  font: 20px sans-serif;
   pointer-events: none;
   text-anchor: middle;
   fill: @text-color;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
+
+
+.connection-label text {
+  font: 2px sans-serif;
+  pointer-events: none;
+  text-anchor: middle;
+  fill: black;
+}
+
 
 .connection {
   stroke: @connection-color;
