--- a/app/templates/d3_defs.html
+++ b/app/templates/d3_defs.html
@@ -12,12 +12,26 @@
 <marker
       id="arrowhead"
       viewBox="0 -5 10 10"
-      refX="16"
+      refX="10"
       refY="0"
       markerWidth="3"
       markerHeight="3"
       orient="auto"
-      fill="gray"
+      fill="#aaa"
+      stroke="white"
+      stroke-width="4px"
+      stroke-location="outside">
+  <path d="M0,-5L10,0L0,5"></path>
+</marker>
+<marker
+      id="arrowhead-selected"
+      viewBox="0 -5 10 10"
+      refX="10"
+      refY="0"
+      markerWidth="3"
+      markerHeight="3"
+      orient="auto"
+      fill="#3498db"
       stroke="white"
       stroke-width="4px"
       stroke-location="outside">
