--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -23,7 +23,7 @@ block content
       button#zoom-out-button.btn.btn-primary
         i.glyphicon.glyphicon-minus
     #trash-bin.controls
-      i.glyphicon.glyphicon-trash
+      i.fa.fa-archive
     #details-container.controls
   #sidebar
     #filters-container
