--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -28,10 +28,10 @@
       <% if (constructor.name === "NodeModel") {%>
         <button id="edit-node-button" class="btn btn-default">Edit</button>
         <button id="expand-node-button" class="btn btn-primary">Expand</button>
-        <button id="remove-node-button" class="btn btn-warning">Remove</button>
+        <button id="archive-node-button" class="btn btn-warning">Archive</button>
       <% } else { %>
         <button id="edit-connection-button" class="btn btn-default">Edit</button>
-        <button id="remove-connection-button" class="btn btn-warning">Remove</button>
+        <button id="archive-connection-button" class="btn btn-warning">Archive</button>
       <% } %>
     </div>
   </div>
