move details view into sidebar

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -111,7 +111,6 @@ svg {
   right: 0;
   top: 0;
   height: 100%;
-  color: @silver;
   width: 0;
   background: @navy;
   overflow-y: scroll;
@@ -138,9 +137,8 @@ svg {
 
 #details-container {
   position: absolute;
-  top: 60px;
-  width: 250px;
-  left: 10px;
+  width: 100%;
+  padding: 8px 10px 0 10px;
   -ms-word-break: break-all;
   word-break: break-all;
   word-break: break-word;
