move detail controls to top of details-box template and add tag icons to tags in detailsView

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -147,6 +147,10 @@ svg {
   hyphens: auto;
 }
 
+.detail-controls{
+  padding-bottom: 10px
+}
+
 .data-tooltip-container {
   position: absolute;
   top: 0;
