use colorpicker to select color

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -237,3 +237,27 @@ svg {
 .panel-body {
   padding: 10px 15px;
 }
+
+// Bootstrap-colorpalette
+
+.bootstrap-colorpalette {
+    padding: 10px 0 10px 0;
+    white-space: normal;
+    line-height:1;
+}
+
+.bootstrap-colorpalette div {
+    line-height:0;
+}
+
+.bootstrap-colorpalette .btn-color {
+    width: 27px;
+    height: 27px;
+    border: 1px solid #fff;
+    margin: 0;
+    padding: 0;
+}
+
+.bootstrap-colorpalette .btn-color:hover {
+    border: 1px solid #000;
+}
