--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -1,6 +1,6 @@
 <form class="form" role="form">
   <div data-fields="name,url,description,tags,color"></div>
-  <!--<div id="colorpalette4"></div>-->
+  <div id="colorpalette4"></div>
   <button id='save-node-connection-button' class="btn btn-default" type="submit">
     Save
   </button>
