better styling for color-picker

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -251,13 +251,13 @@ svg {
 }
 
 .bootstrap-colorpalette .btn-color {
-    width: 27px;
-    height: 27px;
-    border: 1px solid #fff;
-    margin: 0;
+    width: 30px;
+    height: 30px;
+    border: 4px solid #fff;
+    margin: 3px;
     padding: 0;
 }
 
 .bootstrap-colorpalette .btn-color:hover {
-    border: 1px solid #000;
+    border: 4px solid #000;
 }
