switch to using share button so sharing happens in a modal

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -217,6 +217,11 @@ svg {
   float: left;
 }
 
+.network-share-button {
+  margin-right:auto;
+  margin-left:auto;
+}
+
 // Overriding Bootstrap defaults
 
 .btn {
