--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -18,7 +18,8 @@ block content
         button#sidebar-toggle.btn.btn-default
           i.fa.fa-arrows-h
     .toolbar.bottom.right.controls
-      div.addthis_sharing_toolbox
+      button#sharing-button.btn.btn-primary
+        div Share GraphDoc
     #zoom-controls.btn-group-vertical.controls
       button#zoom-in-button.btn.btn-primary
         i.glyphicon.glyphicon-plus
