create landingView module on splash page

--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -4,6 +4,8 @@ head
     meta(charset='utf-8')
     title GraphDocs
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
+    script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
+
   body
     #circle
     #container
