implement creating new graphdoc and opening of existing graphdocs modal

--- a/app/assets/stylesheets/landing.less
+++ b/app/assets/stylesheets/landing.less
@@ -2,12 +2,16 @@
   margin: 0;
   padding: 0;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  color: white;
   -webkit-font-smoothing: antialiased;
 }
 
 body {
   background: lightgray;
+  color: white;
+}
+
+.modal {
+  color: black;
 }
 
 #container {
