--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -3,6 +3,7 @@ html(lang="en")
 head
     meta(charset='utf-8')
     title GraphDocs
+    link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
     script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
 
