a better open existing modal

--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -7,6 +7,8 @@ head
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
     script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
 
+    base(href="/")
+
   body
     #circle
     #container
