--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -9,6 +9,7 @@ html(lang="en")
     link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/custom.css', rel='stylesheet')
     link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
+    link(href='/assets/stylesheets/gsdk-base.css', rel='stylesheet')
     script(type='text/javascript', data-main="main", src="/assets/libs/requirejs/require.js") //loads main.js
 
   body
