--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -117,14 +117,14 @@ svg {
 }
 
 #trash-bin {
-  height: 68px;
+  height: 83px;
   width: 200px;
   font-size: 26pt;
   color: lightgray;
   position: absolute;
   bottom: 40px;
-  left: 60px;
-  padding-top:5px;
+  left: 70px;
+  padding-top:12px;
   text-align: center;
   border: 4px dashed lightgray;
   border-radius: 4px;
@@ -133,6 +133,10 @@ svg {
 #trash-bin.selected {
   border-color:@selected-color;
   color:@selected-color;
+}
+
+.close {
+  outline: none;
 }
 
 #details-container {
