Fixed typo and changed font

--- a/app/public/errors/missingDocument.jade
+++ b/app/public/errors/missingDocument.jade
@@ -5,10 +5,10 @@ head
     title 404 Error!
     base(href='/')
   html
-    body(style='text-align: center; font-size: 24px;')
+    body(style='text-align: center; font-size: 24px;font-family:helvetica, sans-serif;')
       br
       h1 404 Error!
       br
-      div Sorry, the document you are trying to reach is unavaliable!
+      div Sorry, the document you are trying to reach is unavailable!
       br
       a(href='/landing') Return to GraphDocs
