change selected to change text color on nodes

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -24,10 +24,8 @@
   opacity: 0.3;
 }
 
-.node.selected rect {
-  stroke-dasharray:5;
-  stroke-width:3px;
-  stroke: @selected-color;
+.node.selected text {
+  fill: @selected-color;
 }
 
 .node.fixed line{
