--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -64,6 +64,14 @@
   cursor: pointer;
 }
 
+.connection line.select-zone {
+  stroke: transparent;
+  stroke-width: 15px;
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+}
+
 .connection.selected line {
   stroke: @selected-color;
   opacity: 1;
