Selected text changed back

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -51,8 +51,8 @@
   font: 15px sans-serif;
   pointer-events: none;
   text-anchor: middle;
-  fill: #eee;
-  text-shadow: 0 1px 0 #333, 1px 0 0 #333, 0 -1px 0 #333, -1px 0 0 #333;
+  fill: #333;
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
 
 .connection line {
@@ -78,7 +78,7 @@
 
 .connection.selected text {
   fill: @selected-color;
-  text-shadow: 0 2px 0 #333, 2px 0 0 #333, 0 -2px 0 #333, -2px 0 0 #333;
+  text-shadow: 0 2px 0 white, 2px 0 0 white, 0 -2px 0 white, -2px 0 0 white;
 }
 
 .connection.dim line {
@@ -106,7 +106,7 @@ line.hidden {
 
 html, body {
   overflow: hidden;
-  background: #204352;
+  background: #efefef;
   height: 100%;
 }
 
