--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -178,7 +178,7 @@ svg {
 }
 
 .detail-controls{
-  padding-bottom: 10px
+  padding-bottom: 10px;
 }
 
 .data-tooltip-container {
@@ -189,8 +189,9 @@ svg {
 
 .data-tooltip {
   background: @data-tooltip-color;
-  color: @white;
-  border: 1px solid @black;
+  color: white;
+  font-size: 12px;
+  border: 1px solid white;
   max-width: 300px;
 }
 
