Better data tooltip

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -29,6 +29,18 @@
   stroke-width: 3px;
 }
 
+.node-info-body {
+  border: 1px solid #ddd;
+  background: white;
+  padding: 4px;
+  display: none;
+  color: gray;
+}
+
+.node-info-body.shown {
+  display: block;
+}
+
 .node.fixed line{
   stroke-dasharray:5;
   stroke: @fixed-color;
