Empty tooltip doesn't show

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -30,11 +30,13 @@
 }
 
 .node-info-body {
-  border: 1px solid #ddd;
   background: white;
-  padding: 4px;
   display: none;
   color: gray;
+}
+
+.node-info-body .pad {
+  padding: 4px;
 }
 
 .node-info-body.shown {
