--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -29,17 +29,17 @@
   stroke-width: 3px;
 }
 
-.node-info-body {
+.node-info-body, .connection-info-body {
   background: white;
   display: none;
   color: gray;
 }
 
-.node-info-body .pad {
+.node-info-body .pad, .connection-info-body .pad {
   padding: 4px;
 }
 
-.node-info-body.shown {
+.node-info-body.shown, .connection-info-body.shown {
   display: block;
 }
 
@@ -83,6 +83,13 @@
   opacity: 0;
   visibility: hidden;
   cursor: pointer;
+}
+
+.connection.selected line.select-zone {
+  stroke: @selected-color;
+  stroke-width: 5px;
+  opacity: 1;
+  visibility: visible;
 }
 
 .connection.selected line {
