--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -14,4 +14,7 @@ nav.navbar.navbar-default#menu-bar(role="navigation")
             li(role="presentation")
               a#open-doc-button(href="#")
                 | Open Document
+        li.dropdown
+          a#filter-modal-toggle(href="#", data-toggle="modal", data-target="#filters_template")
+            | Filter
       input.navbar-text#menu-title(type="text", placeholder="Untitled Doc")
