--- a/app/templates/d3_defs.html
+++ b/app/templates/d3_defs.html
@@ -18,7 +18,7 @@
       markerHeight="5"
       orient="auto"
       fill="#aaa"
-      stroke="#efefef"
+      stroke="#204352"
       stroke-width="4px"
       stroke-location="outside">
   <path d="M0,-5L10,0L0,5"></path>
@@ -32,7 +32,7 @@
       markerHeight="5"
       orient="auto"
       fill="#3498db"
-      stroke="#efefef"
+      stroke="#204352"
       stroke-width="4px"
       stroke-location="outside">
   <path d="M0,-5L10,0L0,5"></path>
