--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -106,7 +106,7 @@ line.hidden {
 
 html, body {
   overflow: hidden;
-  background: #204352;
+  background: #284552;
   height: 100%;
 }
 
@@ -143,7 +143,7 @@ svg {
   top: 0;
   height: 100%;
   width: 0;
-  background: @navy;
+  background: @offwhite;
   overflow-y: scroll;
 }
 
@@ -162,7 +162,7 @@ svg {
   padding-top:12px;
   text-align: center;
   border: 4px dashed lightgray;
-  border-radius: 4px;
+  border-radius: 0px;
 }
 
 #trash-bin.selected {
@@ -270,12 +270,13 @@ svg {
 
 .btn {
   outline: none !important;
+  border-radius: 0 !important;
 }
 
 .navbar {
   margin-bottom: 0;
   min-height: 0;
-  background: @silver;
+  background: @white;
   border: 0;
   border-radius: 0;
 }
@@ -288,6 +289,10 @@ svg {
 
 .panel-body {
   padding: 10px 15px;
+}
+
+.form-control {
+  border-radius: 0 !important;
 }
 
 // Bootstrap-colorpalette
