typeahead functions on node names, though styling is very ugly

--- a/app/public/mobile/mobile.jade
+++ b/app/public/mobile/mobile.jade
@@ -5,6 +5,7 @@ head
     title GraphDocs
     base(href='/')
     link(href='/assets/mobile/css/main.css', rel='stylesheet')
+    link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
     script(type='text/javascript', data-main="mobile", src="/assets/libs/requirejs/require.js") //loads mobile.js
   body
     #brand GraphDocs
