--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -14,4 +14,8 @@ nav.navbar.navbar-default#menu-bar(role="navigation")
             li(role="presentation")
               a#open-doc-button(href="#")
                 | Open Document
+        li
+          a#analytics-button(href="", data-toggle="modal", data-target="#analytics-modal")
+            | Analytics
+            span.caret
       input.navbar-text#menu-title(type="text", placeholder="Untitled Doc")
