code cleanup, adding variable to fixed tooltip sizes, etc.

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -61,7 +61,6 @@
   cursor: pointer;
   font: 16px sans-serif;
   font-weight:bold;
-  //pointer-events: none;
   text-anchor: middle;
   fill: @text-color;
 }
@@ -132,7 +131,7 @@ line.hidden {
 
 html, body {
   overflow: hidden;
-  background: royalblue;
+  background: #efefef;
   height: 100%;
 }
 
