--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
   #graph
+    .loading-container
+      i.fa.fa-circle-o-notch.fa-spin.fa-5x
     .toolbar.left.controls
       form#search-form.navbar-form.navbar-left
         .form-group
