--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -280,6 +280,22 @@ svg {
   margin-left:auto;
 }
 
+.loading-container {
+  width: 100px;
+  height: 100px;
+  background-color: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  i {
+    position:relative;
+    color:@gray;
+  }
+}
+
 // Overriding Bootstrap defaults
 
 .btn {
