--- a/app/public/mobile.jade
+++ b/app/public/mobile.jade
@@ -18,36 +18,37 @@ html(lang="en")
         .col-xs-12.col-sm-8.col-sm-offset-4.col-md-6.col-md-offset-3
           h2.text-center GraphDocs
           ul.nav.nav-tabs(id="main-tabs")
-            li.active
-              a(data-target="#node", role="tab", data-toggle="tab") Node
             li
+              a(data-target="#node", role="tab", data-toggle="tab") Node
+            li.active
               a(data-target="#connection", role="tab", data-toggle="tab") Connection
           .tab-content
-            .tab-pane.active(id="node")
+            .tab-pane(id="node")
               form(role="form")
                 .form-group
-                  input.form-control(type="text", name="nodeName", placeholder="Node Name")
+                  input.form-control(type="text", id="node-name", placeholder="Node Name")
                 .form-group
-                  textarea.form-control(name="nodeDescription", placeholder="Description")
+                  textarea.form-control(id="node-description", placeholder="Description")
                 .form-group
-                  input.form-control(type="text", name="nodeTags", placeholder="Tags separated by commas")
+                  input.form-control(type="text", id="node-tags", placeholder="Tags separated by commas")
                 button.btn.btn-success(type="button" id="add-node") Create
                 button.btn.btn-default(type="button" id="cancel-node") Cancel
-            .tab-pane(id="connection")
+                button.btn.btn-default(type="button" id="add-connection-node") +Connection
+            .tab-pane.active(id="connection")
               form(role="form")
                 .form-group.input-group
-                  input.form-control(type="text", name="connectionSource", placeholder="Source Node")
+                  input.form-control(type="text", id="source-node-name", placeholder="Source Node")
                   span.input-group-btn
                       button.btn.btn-default(type='button') 
                         i.fa.fa-caret-down
                 .form-group
-                  input.form-control(type="text", name="connectionName", placeholder="Name")
+                  input.form-control(type="text", id="connection-name", placeholder="Name")
                 .form-group
-                  textarea.form-control(name="connectionDescription", placeholder="Description")
+                  textarea.form-control(id="connection-description", placeholder="Description")
                 .form-group
-                  input.form-control(type="text", name="connectionTags", placeholder="Tags separated by commas")
+                  input.form-control(type="text", id="connection-tags", placeholder="Tags separated by commas")
                 .form-group.input-group
-                    input.form-control(type="text", name="connectionTarget", placeholder="Target Node")
+                    input.form-control(type="text", id="destination-node-name", placeholder="Target Node")
                     span.input-group-btn
                         button.btn.btn-default(type='button') 
                           i.fa.fa-caret-down
